<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ficha_Project</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    // Strings - Luis
    <string name="miperfil">Mi Perfil</string>
    <string name="editarfoto">Editar foto de perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="numtel">Numero de telefono</string>
    <string name="correo">Correo electronico</string>
    <string name="cambiarclave">Cambiar clave</string>
    <string name="misdisp">Mis dispositivos</string>
    <string name="cerrarsesion">Cerrar sesion</string>
    <string name="eliminarcuenta">Eliminar cuenta</string>
    <string name="vamosrecorrido">Vamos a por ese recorrido</string>
    <string name="ingresacelular">+56 Ingresa tu celular</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="rellenatuperfil">Rellena tu Perfil</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ficha">Ficha</string>
    <string name="iniciarsesion">Iniciar sesion</string>
    <string name="notienescuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>

    // Strings - Duvan
    <string name="title_activity_google_maps_api">google_maps_api</string>
    <string name="btnDireccion">¿Dónde se dirige?</string>
    <string name="btnDirxccion">¿Dónde se dirige?</string>
    <string name="btnCasa">Casa</string>
    <string name="btnTrabajo">Trabajo</string>
    <string name="btnLugares">Lugares</string>
    <string name="btnSeleccionarUbicacion">Seleccionar</string>
    <string name="ubiDestino">Ubicación destino: %s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Clase navigation drawer</string>
    <string name="Viaje">Viaje</string>
    <string name="btnConfirmarViaje">Confirmar</string>
    <string name="DisponibilidadP">Disponible:</string>
    <string name="Efectivo">Efectivo</string>
    <string name="Transferencia">Transferencia</string>
    <string name="precio">Precio:</string>
    <string name="crear_Cuenta2">Imagen Japan</string>
    <string name="googleAPIKEY">AIzaSyAUsVUUCaUT1UXm6YPNhORU42v9fxH45lA</string>
    <string name="Disponibilidad">Disponibilidad:</string>
    <string name="EstimaciónTiempo">Tiempo Estimado:</string>
    <string name="btnBuscar">Buscar</string>
    <string name="txtUbiActual">Seleccione en donde se encuentra</string>
    <string name="txtUbiDestino">Seleccione hacia donde se dirige</string>
    <string name="textUbiActual">Ubicación actual</string>
    <string name="textUbiDestino">Ubicación destino</string>
    <string name="btnIr">Buscar un vehiculo</string>
    <string name="rbConductor">Conductor</string>
    <string name="rbPasajero">Pasajero</string>
    <string name="marker_from">Desde</string>
    <string name="marker_to">Hacia</string>
    <string name="mSolicitudes">Solicitudes</string>
    <string name="mIngresos">Ingresos</string>
    <string name="mClasificacion">Clasificación</string>
    <string name="mPago">Pago</string>
    <string name="mCAyuda">Ayuda</string>
    <string name="mCSoporte">Soporte</string>
    <string name="mCSeguridad">Seguridad</string>
    <string name="mCConfiguraciones">Configuración</string>
    <string name="abrirToggle">Abrir</string>
    <string name="cerrarToogle">Cerrar</string>
    <string name="btnEntrar">Iniciar sesión</string>
    <string name="tvCorreo">Email</string>
    <string name="tvContra">Contraseña</string>
    <string name="cbRecuerdame">Recuerdame</string>
    <string name="comoVas">¿Pasajero o Conductor?</string>
    <string name="telefono">Teléfono</string>
    // Strings - Diego
    <string name="Ficha">Ficha</string>
    <string name="editarApellido">Apellido</string>
    <string name="editarNombre">Nombre</string>
    <string name="imagen">TODO</string>
    <string name="imagenPerro">TODO</string>
    <string name="editarNumero">965275629</string>
    <string name="estesej_gmail_com">estesej@gmail.com</string>
    <string name="IconoPersona">icono Persona</string>
    <string name="Subirdocumentos">Falta que subas un par de documentos a la aplicacion</string>
    <string name="Verificacion">La verificacion de documentos podria durar alrededor de 24 a 72 horas. Agradecemos tu paciencia y comprension.</string>
    <string name="CelFrente">Celula de Identidad (Frente)</string>
    <string name="CelAtras">Celula de Identidad (Reverso)</string>
    <string name="Licencia">Licencia de Conducir Chilena</string>
    <string name="AntecedentesPenales">Certificado de Antecedentes Penales</string>
    <string name="Permiso">Permiso de Circulación</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="item_menu_conductor">Item</string>
    <string name="string_item_menu_conductor">item_opPerfil</string>
    <string name="Rumbo">Rumbo al punto de </string>
    <string name="Llegue">Llegue antes de las </string>
    <string name="Nombre">Usuario nombre</string>
    <string name="Frecuente">Usuario Frecuente</string>
    <string name="Llegado">He llegado a destino</string>
    <string name="Llamar">Llamar</string>
    <string name="Develop">Developer</string>
    <string name="Foto">Foto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Developer">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="password">Password</string>
</resources>