<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".redireccionar_pasajero_conductor">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/vamosrecorrido"
        android:textColor="#212121"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:hint="@string/ingresacelular"
        android:inputType="phone"
        android:textColorHint="#78909C"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/comoVas"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgClases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbPasajero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPasajero" />

        <RadioButton
            android:id="@+id/rbConductor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/rbConductor" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSiguienteRedirec"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/style_border_button"
        android:onClick="redireccionarVista"
        android:text="@string/btnSiguiente" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/imagenPerro"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/dog_ga041b1a6b_1920" />

</LinearLayout>