<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/style_bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="280dp"
    android:padding="14dp">

    <EditText
        android:id="@+id/etUbiActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_border_button"
        android:ems="10"
        android:hint="@string/txtUbiActual"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etUbiDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/style_border_button"
        android:ems="10"
        android:hint="@string/txtUbiDestino"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnBuscarVehiculo"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/style_border_button"
        android:text="@string/btnIr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/style_border_button"
            android:drawableLeft="@drawable/ic_house"
            android:text="@string/btnCasa"
            android:textColor="#424242"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnTrabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/style_border_button"
            android:drawableLeft="@drawable/ic_work"
            android:text="@string/btnTrabajo"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnLugares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/style_border_button"
            android:drawableLeft="@drawable/ic_favorite_places"
            android:text="@string/btnLugares"
            android:textColor="#424242"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>